2002-05-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 17135: Src/Zle/compcore.c, Src/Zle/zle_tricky.c: fix for
	unquoting with `compset -q' with singly and doubly quoted
	strings

2002-05-12  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* c.f. 17128: Doc/Makefile.in: back out changes accidentally
	committed along with 17081.

2002-05-12 Andrej Borsenkow  <bor@zsh.org>

	* unposted: Completion/Redhat/Command/_service: fix context
	name for tag-order style. For now comment it out because it
	does not work

2002-05-10  Peter Stephenson  <pws@csr.com>

	* users/4951: Doc/Zsh/builtins.yo: make it clearer that ulimit
	defaults to soft limits.

2002-05-08  Peter Stephenson  <pws@csr.com>

	* 17102: Src/Modules/tcp.c: looking up TCP sessions by fd returned
	the wrong pointer.

	* 17097: Src/Modules/tcp.c: closing all TCP sessions referenced
	freed memory.

	* Unposted: Src/Modules/zselect.c: remove an unused counter.

	* 17095: Src/Modules/zselect.c: wrong index when appending to a
	value with zselect -A assoc.

	* 17081: Src/Modules/zselect.c, Src/Modules/zselect.mdd,
	Doc/Zsh/mod_zselect.yo:  zsh/zselect module provides zselect
	builtin as front-end to select system call.

2002-05-08  Andrej Borsenkow  <bor@zsh.org>

	* 17080: Doc/Zsh/compsys.yo: clarify tag-order style usage

	* 17076: Completion/Redhat/Command/.distfiles,
	Completion/Redhat/Command/_service, Completion/Unix/Command/_chkconfig,
	Completion/Unix/Command/_init_d, Completion/Unix/Type/.distfiles,
	Completion/Unix/Type/_services: use new helper _services to complete
	init/xinetd services; make chkconfig use it; completion of
	service command

	* 17075: Completion/Mandrake/Command/_urpmi: _urpmi
	completion update

	* 17074: Completion/Linux/Command/.distfiles,
	Completion/Linux/Command/_mondo, Src/Zle/complete.mdd:
	mondoarchive completion (with typo correction from Bart)

	* unposted: .cvsignore: add autom4te.cache. Looks like
	autoconf-2.53 generates it for whatever reason
